--- a/bundles/GeneratorBundle/Template/component/default/administrator/language/en-GB/en-GB.{{extension.element.lower}}.ini
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/language/en-GB/en-GB.{{extension.element.lower}}.ini
@@ -9,7 +9,6 @@
 {{extension.element.upper}}_COMPONENT_LABEL="Basic"
 {{extension.element.upper}}_COMPONENT_DESC="Basic Component config."
 {{extension.element.upper}}_ACCESS_HEADING="Access"
-{{extension.element.upper}}_TITLE_LIST="List"
 
 
 ; Config inputs
@@ -113,3 +112,5 @@ JFIELD_ALT_LAYOUT="View Layout"
 {{extension.element.upper}}_SELECT_{{controller.item.name.upper}}="Select {{controller.item.name.cap}}"
 {{extension.element.upper}}_SELECT_{{controller.item.name.upper}}_DESC="Select {{controller.item.name.cap}}"
 {{extension.element.upper}}_{{controller.list.name.upper}}_VIEW_DEFAULT_OPTION="Default"
+{{extension.element.upper}}_{{controller.item.name.upper}}_TITLE_LIST="Salura List"
+{{extension.element.upper}}_{{controller.item.name.upper}}_TITLE_ITEM_EDIT="{{controller.item.name.cap}} Item Edit"
