--- a/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
@@ -46,3 +46,5 @@ JFIELD_ALT_LAYOUT="View 版面"
 {{extension.element.upper}}_SELECT_{{controller.item.name.upper}}="選擇 {{controller.item.name.cap}}"
 {{extension.element.upper}}_SELECT_{{controller.item.name.upper}}_DESC="按這裡即可選擇 {{controller.item.name.cap}}"
 {{extension.element.upper}}_{{controller.list.name.upper}}_VIEW_DEFAULT_OPTION="預設"
+{{extension.element.upper}}_{{controller.item.name.upper}}_TITLE_LIST="Salura 列表管理"
+{{extension.element.upper}}_{{controller.item.name.upper}}_TITLE_ITEM_EDIT="{{controller.item.name.cap}} 項目編輯"
