Fix language bug (Fix #40 #41)

--- a/bundles/GeneratorBundle/Template/component/default/administrator/language/en-GB/en-GB.{{extension.element.lower}}.ini
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/language/en-GB/en-GB.{{extension.element.lower}}.ini
@@ -112,5 +112,5 @@ JFIELD_ALT_LAYOUT="View Layout"
 {{extension.element.upper}}_SELECT_{{controller.item.name.upper}}="Select {{controller.item.name.cap}}"
 {{extension.element.upper}}_SELECT_{{controller.item.name.upper}}_DESC="Select {{controller.item.name.cap}}"
 {{extension.element.upper}}_{{controller.list.name.upper}}_VIEW_DEFAULT_OPTION="Default"
-{{extension.element.upper}}_{{controller.item.name.upper}}_TITLE_LIST="Salura List"
+{{extension.element.upper}}_{{controller.list.name.upper}}_TITLE_LIST="{{controller.item.name.cap}} List"
 {{extension.element.upper}}_{{controller.item.name.upper}}_TITLE_ITEM_EDIT="{{controller.item.name.cap}} Item Edit"
