--- a/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
@@ -2,51 +2,84 @@
 ; Copyright (C) 2012 {ORGANIZATION}. All rights reserved.
 ; License GNU General Public License version 2 or later., see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
+; -------------------------------------------------
 
-; Main information
+COM_CONFIG_CATEGORY_FIELDSET_LABEL="分類顯示設定"
+COM_CONFIG_ITEM_FIELDSET_LABEL="項目顯示設定"
 {{extension.element.upper}}="{{extension.name.cap}} 元件"
-{{extension.element.upper}}_CONFIGURATION="{{extension.name.cap}} 元件設定"
-{{extension.element.upper}}_COMPONENT_LABEL="基礎設定"
-{{extension.element.upper}}_COMPONENT_DESC="這裡是基礎設定"
 {{extension.element.upper}}_ACCESS_HEADING="Access"
-{{extension.element.upper}}_TITLE_LIST="列表管理"
-
-
-; Config inputs
+{{extension.element.upper}}_BATCH_OPTIONS="批量處理選定的項目"
+{{extension.element.upper}}_BATCH_TIP="如果選擇要複製一個項目，其他選擇的動作將會套用到複製的項目。除此之外，所有動作將會套用到選擇的項目。"
 {{extension.element.upper}}_CHANGE_ITEM="更換項目"
 {{extension.element.upper}}_CHANGE_ITEM_BUTTON="按此更改項目"
-{{extension.element.upper}}_SELECT_ITEM="選擇項目"
-
-{{extension.element.upper}}_FIELDSET_RULES="項目權限設定"
-{{extension.element.upper}}_LINKED_TITLES_IN_LIST="分類頁面項目標題超連結"
-{{extension.element.upper}}_LINKED_TITLES_IN_LIST_DESC="項目標題超連結"
-{{extension.element.upper}}_MODIFIED="最後更新"
-{{extension.element.upper}}_ORDER_DIR="正反序"
-{{extension.element.upper}}_ORDER_DIR_ASC="正序"
-{{extension.element.upper}}_ORDER_DIR_DESC="反序"
-{{extension.element.upper}}_READMORE="閱讀更多"
+{{extension.element.upper}}_COMPONENT_DESC="這裡是基礎設定"
+{{extension.element.upper}}_COMPONENT_LABEL="基礎設定"
+{{extension.element.upper}}_CONFIGURATION="{{extension.name.cap}} 元件設定"
 {{extension.element.upper}}_CREATED="建立時間"
-{{extension.element.upper}}_PUBLISHED_DOWN="停止發佈時間"
-{{extension.element.upper}}_PUBLISH_DOWN_DESC="停止發佈時間"
-{{extension.element.upper}}_PUBLISH_UP="開始發佈時間"
-{{extension.element.upper}}_PUBLISH_UP_DESC="開始發佈時間"
-
-COM_CONFIG_ITEM_FIELDSET_LABEL="項目顯示設定"
-COM_CONFIG_CATEGORY_FIELDSET_LABEL="分類顯示設定"
-{{extension.element.upper}}_ITEM_SETTINGS="項目設定"
-JFIELD_ALT_LAYOUT="View 版面"
-
-{{extension.element.upper}}_PARENT_ITEM="上層項目"
-{{extension.element.upper}}_PARENT_ITEM_DESC="選擇上層項目"
-{{extension.element.upper}}_TITLE_UNCATEGORISED="未分類"
-
-; Modal
-{{extension.element.upper}}_MODAL_NO_SELECT="- 不選擇 -"
-
-; 2.0
+{{extension.element.upper}}_CREATED_BY="建立者"
+{{extension.element.upper}}_CREATED_BY_DESC="建立者"
+{{extension.element.upper}}_CREATED_DESC="選擇建立時間"
+{{extension.element.upper}}_EDIT_FIELDS_ADVANCED="進階"
+{{extension.element.upper}}_EDIT_FIELDS_BASIC="一般"
+{{extension.element.upper}}_EDIT_FIELDS_RULES="權限"
+{{extension.element.upper}}_EDIT_FIELDSET_CREATED="建立資訊"
+{{extension.element.upper}}_EDIT_FIELDSET_INFORMATION="一般資訊"
+{{extension.element.upper}}_EDIT_FIELDSET_PUBLISH="發佈資訊"
+{{extension.element.upper}}_EDIT_FIELDSET_RULES="權限設定"
+{{extension.element.upper}}_EDIT_FIELDSET_TEXT="內文設定"
 {{extension.element.upper}}_EDIT_TAB_ADVANCED="進階"
 {{extension.element.upper}}_EDIT_TAB_BASIC="一般"
 {{extension.element.upper}}_EDIT_TAB_RULES="權限"
+{{extension.element.upper}}_FIELDSET_RULES="項目權限設定"
+{{extension.element.upper}}_FILTER_NOTE_GENERAL="基本過濾選項"
+{{extension.element.upper}}_FULLTEXT="全文"
+{{extension.element.upper}}_FULLTEXT_DESC="在這裡輸入全文"
+{{extension.element.upper}}_ID="ID"
+{{extension.element.upper}}_IMAGES="圖片"
+{{extension.element.upper}}_IMAGES_DESC="按此選擇上傳圖片"
+{{extension.element.upper}}_INTROTEXT="摘要文字"
+{{extension.element.upper}}_INTROTEXT_DESC="在此輸入摘要文字"
+{{extension.element.upper}}_ITEM_SETTINGS="項目設定"
+{{extension.element.upper}}_LINKED_TITLES_IN_LIST="分類頁面項目標題超連結"
+{{extension.element.upper}}_LINKED_TITLES_IN_LIST_DESC="項目標題超連結"
+{{extension.element.upper}}_MODAL_NO_SELECT="- 不選擇 -"
+{{extension.element.upper}}_MODIFIED="最後更新"
+{{extension.element.upper}}_MORE_LINKS="更多項目"
+{{extension.element.upper}}_N_ITEMS_ARCHIVED="%d 個項目成功封存"
+{{extension.element.upper}}_N_ITEMS_ARCHIVED_1="%d 個項目成功封存"
+{{extension.element.upper}}_N_ITEMS_CHECKED_IN_0="沒有項目被檢入"
+{{extension.element.upper}}_N_ITEMS_CHECKED_IN_1="%d 個項目被檢入"
+{{extension.element.upper}}_N_ITEMS_CHECKED_IN_MORE="%d 個項目被檢入"
+{{extension.element.upper}}_N_ITEMS_DELETED="%d 個項目成功刪除"
+{{extension.element.upper}}_N_ITEMS_DELETED_1="%d 個項目成功刪除"
+{{extension.element.upper}}_N_ITEMS_PUBLISHED="%d 個項目成功啟用"
+{{extension.element.upper}}_N_ITEMS_PUBLISHED_1="%d 個項目成功啟用"
+{{extension.element.upper}}_N_ITEMS_TRASHED="%d 個項目被放入垃圾桶"
+{{extension.element.upper}}_N_ITEMS_TRASHED_1="%d 個項目被放入垃圾桶"
+{{extension.element.upper}}_N_ITEMS_UNPUBLISHED="%d 個項目成功關閉"
+{{extension.element.upper}}_N_ITEMS_UNPUBLISHED_1="%d 個項目成功關閉"
+{{extension.element.upper}}_NO_ITEM_SELECTED="沒有項目被選取"
+{{extension.element.upper}}_ORDER_DIR="正反序"
+{{extension.element.upper}}_ORDER_DIR_ASC="正序"
+{{extension.element.upper}}_ORDER_DIR_DESC="反序"
+{{extension.element.upper}}_PARENT_ITEM="上層項目"
+{{extension.element.upper}}_PARENT_ITEM_DESC="選擇上層項目"
+{{extension.element.upper}}_PUBLISH_DOWN_DESC="停止發佈時間"
+{{extension.element.upper}}_PUBLISH_UP="開始發佈時間"
+{{extension.element.upper}}_PUBLISH_UP_DESC="開始發佈時間"
+{{extension.element.upper}}_PUBLISHED_DOWN="停止發佈時間"
+{{extension.element.upper}}_READMORE="閱讀更多"
+{{extension.element.upper}}_REBUILD="重建"
+{{extension.element.upper}}_REBUILD_FAILURE="重建失敗"
+{{extension.element.upper}}_REBUILD_SUCCESS="重建成功"
+{{extension.element.upper}}_SAVE_SUCCESS="項目成功儲存"
+{{extension.element.upper}}_SELECT_ITEM="選擇項目"
+{{extension.element.upper}}_TITLE_ITEM_EDIT="項目編輯"
+{{extension.element.upper}}_TITLE_LIST="列表管理"
+{{extension.element.upper}}_TITLE_UNCATEGORISED="未分類"
+{{extension.element.upper}}_URL="網址"
+{{extension.element.upper}}_URL_DESC="在此填入網址"
+JFIELD_ALT_LAYOUT="View 版面"
 
 ; {{controller.item.name.cap}}
 {{extension.element.upper}}_VIEW_{{controller.item.name.upper}}="{{controller.item.name.cap}}"
