Update com tmpl

--- a/bundles/GeneratorBundle/Template/component/default/administrator/language/en-GB/en-GB.{{extension.element.lower}}.ini
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/language/en-GB/en-GB.{{extension.element.lower}}.ini
@@ -57,15 +57,15 @@ COM_CONFIG_ITEM_FIELDSET_LABEL="Item Config"
 {{extension.element.upper}}_N_ITEMS_UNPUBLISHED="%d items successfully unpublished"
 {{extension.element.upper}}_N_ITEMS_UNPUBLISHED_1="%d item successfully unpublished"
 {{extension.element.upper}}_NO_ITEM_SELECTED="No items selected"
-{{extension.element.upper}}_ORDER_DIR="Order Dir"
-{{extension.element.upper}}_ORDER_DIR_ASC="Asc"
-{{extension.element.upper}}_ORDER_DIR_DESC="Desc"
+{{extension.element.upper}}_ORDER_DIR="Direction"
+{{extension.element.upper}}_ORDER_DIR_ASC="ASC"
+{{extension.element.upper}}_ORDER_DIR_DESC="DESC"
 {{extension.element.upper}}_PARENT_ITEM="Parent Item"
 {{extension.element.upper}}_PARENT_ITEM_DESC="Select parent item."
 {{extension.element.upper}}_PUBLISH_DOWN_DESC="Finish Publishing Time."
 {{extension.element.upper}}_PUBLISH_UP="Start Publishing"
 {{extension.element.upper}}_PUBLISH_UP_DESC="Start publishing time."
-{{extension.element.upper}}_PUBLISHED_DOWN="Finish Publishing"
+{{extension.element.upper}}_PUBLISH_DOWN="Finish Publishing"
 {{extension.element.upper}}_READMORE="Readmore"
 {{extension.element.upper}}_REBUILD="Rebuild"
 {{extension.element.upper}}_REBUILD_FAILURE="Rebuild failure."
@@ -78,6 +78,16 @@ COM_CONFIG_ITEM_FIELDSET_LABEL="Item Config"
 {{extension.element.upper}}_URL="URL"
 {{extension.element.upper}}_URL_DESC="Enter url here."
 JFIELD_ALT_LAYOUT="View Layout"
+
+{{extension.element.upper}}_FIELD_ID="ID"
+{{extension.element.upper}}_FIELD_ORDER="Order"
+{{extension.element.upper}}_FIELD_ORDER_DESC="Item ordering rules."
+{{extension.element.upper}}_NUM_INTRO_ITEMS="# Intro Items"
+{{extension.element.upper}}_NUM_INTRO_ITEMS_DESC="Number of intro items."
+{{extension.element.upper}}_NUM_LEADING_ITEMS="# Leading Items"
+{{extension.element.upper}}_NUM_LEADING_ITEMS_DESC="Number of leading items."
+{{extension.element.upper}}_ORDERING="Ordering"
+{{extension.element.upper}}_ORDER_DIR_DESCRIPTION="Use ASC or DESC to sort items."
 
 ; {{controller.item.name.cap}}
 {{extension.element.upper}}_VIEW_{{controller.item.name.upper}}="{{controller.item.name.cap}}"
