--- a/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
@@ -67,7 +67,7 @@ COM_CONFIG_ITEM_FIELDSET_LABEL="項目顯示設定"
 {{extension.element.upper}}_PUBLISH_DOWN_DESC="停止發佈時間"
 {{extension.element.upper}}_PUBLISH_UP="開始發佈時間"
 {{extension.element.upper}}_PUBLISH_UP_DESC="開始發佈時間"
-{{extension.element.upper}}_PUBLISHED_DOWN="停止發佈時間"
+{{extension.element.upper}}_PUBLISH_DOWN="停止發佈時間"
 {{extension.element.upper}}_READMORE="閱讀更多"
 {{extension.element.upper}}_REBUILD="重建"
 {{extension.element.upper}}_REBUILD_FAILURE="重建失敗"
