--- a/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/language/zh-TW/zh-TW.{{extension.element.lower}}.ini
@@ -30,6 +30,9 @@ COM_CONFIG_ITEM_FIELDSET_LABEL="項目顯示設定"
 {{extension.element.upper}}_EDIT_TAB_ADVANCED="進階"
 {{extension.element.upper}}_EDIT_TAB_BASIC="一般"
 {{extension.element.upper}}_EDIT_TAB_RULES="權限"
+{{extension.element.upper}}_FIELD_ID="編號 ID"
+{{extension.element.upper}}_FIELD_ORDER="排序"
+{{extension.element.upper}}_FIELD_ORDER_DESC="排序的欄位規則。"
 {{extension.element.upper}}_FIELDSET_RULES="項目權限設定"
 {{extension.element.upper}}_FILTER_NOTE_GENERAL="基本過濾選項"
 {{extension.element.upper}}_FULLTEXT="全文"
@@ -59,15 +62,21 @@ COM_CONFIG_ITEM_FIELDSET_LABEL="項目顯示設定"
 {{extension.element.upper}}_N_ITEMS_UNPUBLISHED="%d 個項目成功關閉"
 {{extension.element.upper}}_N_ITEMS_UNPUBLISHED_1="%d 個項目成功關閉"
 {{extension.element.upper}}_NO_ITEM_SELECTED="沒有項目被選取"
+{{extension.element.upper}}_NUM_INTRO_ITEMS="# 摘要項目數"
+{{extension.element.upper}}_NUM_INTRO_ITEMS_DESC="每個頁面顯示的摘要項目數量，會根據欄位數量排列。"
+{{extension.element.upper}}_NUM_LEADING_ITEMS="# 重點項目數"
+{{extension.element.upper}}_NUM_LEADING_ITEMS_DESC="摘要前的重點項目數量，不會分欄。"
 {{extension.element.upper}}_ORDER_DIR="正反序"
 {{extension.element.upper}}_ORDER_DIR_ASC="正序"
 {{extension.element.upper}}_ORDER_DIR_DESC="反序"
+{{extension.element.upper}}_ORDER_DIR_DESCRIPTION="用升冪或降冪排序"
+{{extension.element.upper}}_ORDERING="排列順序"
 {{extension.element.upper}}_PARENT_ITEM="上層項目"
 {{extension.element.upper}}_PARENT_ITEM_DESC="選擇上層項目"
+{{extension.element.upper}}_PUBLISH_DOWN="停止發佈時間"
 {{extension.element.upper}}_PUBLISH_DOWN_DESC="停止發佈時間"
 {{extension.element.upper}}_PUBLISH_UP="開始發佈時間"
 {{extension.element.upper}}_PUBLISH_UP_DESC="開始發佈時間"
-{{extension.element.upper}}_PUBLISH_DOWN="停止發佈時間"
 {{extension.element.upper}}_READMORE="閱讀更多"
 {{extension.element.upper}}_REBUILD="重建"
 {{extension.element.upper}}_REBUILD_FAILURE="重建失敗"
